Version 10.4.162 - 08 August 2007, by Thierry Vignaud

- drakboot:
  o allow choosing another bootloader method when a package cannot be
  installed (occurs on 2008.0 beta1 where mandriva-gfxboot-theme is missing)
- diskdrake:
  o do not show partition types which have no associated filesystem
    for LVM LV (#32326)
- allow using diskdrake even if there is only a lvm PV on full disk available
- fix range max value >2TB when creating a partition (useful for LVs >2TB)
- kill security level step (only reachable from summary now)
- restore progress bar when formatting ext3
- summary screen:
  o warn if the security level will prevent accessing windows partitions
  o reorder steps according to specs
  o render titles in bold

Version 10.4.158 - 3 August 2007, by Pascal "Pixel" Rigaux

- configure removable writable media to use "flush" option instead of "sync" (#23042)

Version 10.4.155 - 2 August 2007, by Pascal "Pixel" Rigaux

- use kbd (setfont) instead of console-tools (consolechars)
- drop supermount support
- diskdrake: drop "Rescue partition table" feature 
  (was based on rescuept which has been dropped in util-linux, but was quite
  bad compared to testdisk anyway)

Version 10.4.150 - 24 July 2007, by Olivier "blino" Blin
- update banner for 2008 beta 1 (from Anne)

Version 10.4.149 - 17 July 2007, by Olivier "blino" Blin
- fix build of wireless binding with latest kernel headers

Version 10.4.148 - 17 July 2007, by Olivier "blino" Blin

- add ide-disk module in disk/raw
- load ide-disk module when loading disk/ide category

Version 10.4.147 - 12 July 2007, by Pascal "Pixel" Rigaux

- allow using sqlite for rpmdb when using option rpm_dbapi=4
- add /LIB/udev/usb_id which is needed by mouse.pm to generate /dev/input/by-id/xxx

Version 10.4.142 - 2 July 2007, by Pascal "Pixel" Rigaux

- brown paper bag fix (stage1 can't create symlink /etc/rpm/platform)

Version 10.4.141 - 29 June 2007, by Pascal "Pixel" Rigaux

- bundle /etc/rpm/platform for rpm 4.4.8