@@ -1,3 +1,5 @@
+- cache PCI probe results
+
 Version 10.4.162 - 08 August 2007, by Thierry Vignaud
 
 - drakboot:
